added new features

--- a/index.html
+++ b/index.html
@@ -77,6 +77,66 @@
                         <p class="slider__name">Emily, Los Angeles</p>
                     </div>
                 </div>
+                <div class="swiper-slide">
+                    <div class="slider-container">
+                        <img class="slider__img" src="./images/reviews/test-2.png" alt="" width="85" height="85">
+                        <div class="text-container">
+                            <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
+                                sem. In
+                                hendrerit
+                                nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                        </div>
+                        <p class="slider__name">Emily, Los Angeles</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider-container">
+                        <img class="slider__img" src="./images/reviews/test-2.png" alt="" width="85" height="85">
+                        <div class="text-container">
+                            <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
+                                sem. In
+                                hendrerit
+                                nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                        </div>
+                        <p class="slider__name">Emily, Los Angeles</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider-container">
+                        <img class="slider__img" src="./images/reviews/test-2.png" alt="" width="85" height="85">
+                        <div class="text-container">
+                            <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
+                                sem. In
+                                hendrerit
+                                nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                        </div>
+                        <p class="slider__name">Emily, Los Angeles</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider-container">
+                        <img class="slider__img" src="./images/reviews/test-2.png" alt="" width="85" height="85">
+                        <div class="text-container">
+                            <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
+                                sem. In
+                                hendrerit
+                                nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                        </div>
+                        <p class="slider__name">Emily, Los Angeles</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider-container">
+                        <img class="slider__img" src="./images/reviews/test-2.png" alt="" width="85" height="85">
+                        <div class="text-container">
+                            <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
+                                sem. In
+                                hendrerit
+                                nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                        </div>
+                        <p class="slider__name">Emily, Los Angeles</p>
+                    </div>
+                </div>
             </div>
     
             <div class="swiper-pagination"></div>
